src/objects/FourPlanning__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Periodica_Ejecutiva__c</fullName>
        <inlineHelpText>¿Tenemos agenda periódica ejecutiva con participación de nivel directivo de ambas organizaciones?</inlineHelpText>
        <label>Agenda Periodica Ejecutiva</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda_Periodica_Operacional__c</fullName>
        <inlineHelpText>¿Tenemos agenda periódica operacional sobre la calidad de los servicios prestados?</inlineHelpText>
        <label>Agenda Periodica Operacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda_de_Trabajo_1__c</fullName>
        <label>AdT Operativa - Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda_de_Trabajo_2__c</fullName>
        <label>AdT legacy - innovacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda_de_Trabajo_3__c</fullName>
        <label>AdT Tradicional - Digital</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambito_de_actuacion__c</fullName>
        <label>Ambito de actuacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_que_fracasamos_en_el_pasado__c</fullName>
        <inlineHelpText>¿Existen áreas en el cliente con las que, teniendo productos y soluciones, no estamos teniendo relación?</inlineHelpText>
        <label>Area que fracasamos en el pasado</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Areas_que_Seria_Bueno_Trabajar__c</fullName>
        <inlineHelpText>¿En que Areas del Cliente crees que seria bueno trabajar y no lo estamos haciendo?</inlineHelpText>
        <label>Areas que Seria Bueno Trabajar</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canal_Comercializacion_cliente__c</fullName>
        <description>Principal Canal de Comercialización del Cliente</description>
        <label>Canal Comercializacion cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Line</fullName>
                </value>
                <value>
                    <fullName>Off-Line</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
                <value>
                    <fullName>No disponible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_Comercializacion_que_mas_crece__c</fullName>
        <inlineHelpText>¿Cuál es el canal de comercialización que más esta creciendo?</inlineHelpText>
        <label>Canal Comercializacion que mas crece</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Line</fullName>
                </value>
                <value>
                    <fullName>Off-Line</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
                <value>
                    <fullName>Nula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_de_comercializaci_n_multiple__c</fullName>
        <label>Canal de comercialización multiple</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agencias o Sucursales Físicas Propias</fullName>
                </value>
                <value>
                    <fullName>Agencias o Sucursales Físicas de Terceros</fullName>
                </value>
                <value>
                    <fullName>Agentes Comercializadores propios (Empleados)</fullName>
                </value>
                <value>
                    <fullName>Agentes Comercializadores de Terceros (Canales)</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Web Propia</fullName>
                </value>
                <value>
                    <fullName>Web de Terceros</fullName>
                </value>
                <value>
                    <fullName>Aplicativo Móvil</fullName>
                </value>
                <value>
                    <fullName>Máquinas de Autoservicios (ATMs, Vending, etc…)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_que_Dispone__c</fullName>
        <label>Canal que Dispone</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cajeros</fullName>
                </value>
                <value>
                    <fullName>Sucursal</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Redes Sociales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cantidad_de_Empleados__c</fullName>
        <label>No se utiliza</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mas de 1000</fullName>
                </value>
                <value>
                    <fullName>500 - 1000</fullName>
                </value>
                <value>
                    <fullName>100 - 500</fullName>
                </value>
                <value>
                    <fullName>0 - 100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cantidad_de_Sedes__c</fullName>
        <label>No se utiliza</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 19</fullName>
                </value>
                <value>
                    <fullName>20 - 39</fullName>
                </value>
                <value>
                    <fullName>40 - 59</fullName>
                </value>
                <value>
                    <fullName>60 - 79</fullName>
                </value>
                <value>
                    <fullName>80 - 100</fullName>
                </value>
                <value>
                    <fullName>+ de 100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cantidad_de_empleados_exacto__c</fullName>
        <label>Cantidad de empleados exacto</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_sedes_exactas__c</fullName>
        <label>Cantidad de sedes exactas</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_sucursales__c</fullName>
        <label>Cantidad de sucursales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Como_se_mantiene_el_numero_de_sucursales__c</fullName>
        <label>Como se mantiene el numero de sucursales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crece</fullName>
                </value>
                <value>
                    <fullName>Se Mantiene</fullName>
                </value>
                <value>
                    <fullName>Decrece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competidor_Principal_1__c</fullName>
        <label>Competidor Principal 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competidor_Principal_2__c</fullName>
        <label>Competidor Principal 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competidor_Principal_3__c</fullName>
        <label>Competidor Principal 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compra_de_caracter_politico_o__c</fullName>
        <label>Compra de caracter politico o tecnico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Político</fullName>
                </value>
                <value>
                    <fullName>Técnico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacto_con_mayor_afinidad_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto con mayor afinidad 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FourPlannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacto_con_mayor_afinidad_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto con mayor afinidad 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FourPlannings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacto_con_mayor_afinidad_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto con mayor afinidad 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>FourPlannings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FourPlannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>De_cuantos_veh_culos_dispone_el_parque__c</fullName>
        <label>De cuantos vehículos dispone el parque</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desafio_de_la_Empresa_1__c</fullName>
        <label>Desafio de la Empresa 1</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desafio_de_la_Empresa_2__c</fullName>
        <label>Desafio de la Empresa 2</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desafio_de_la_Empresa_3__c</fullName>
        <label>Desafio de la Empresa 3</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dispone_de_parque_automotor__c</fullName>
        <label>Dispone de parque automotor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Empleados_Crece_Decrece_Matiene__c</fullName>
        <label>Empleados Crece Decrece Matiene</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crece</fullName>
                </value>
                <value>
                    <fullName>Se mantiene</fullName>
                </value>
                <value>
                    <fullName>Decrece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evento_telefonica_cliente__c</fullName>
        <inlineHelpText>¿A qué evento de Telefónica vas a invitar al cliente?</inlineHelpText>
        <label>Evento telefonica cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facturacion__c</fullName>
        <label>Facturación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fecha_Evento__c</fullName>
        <inlineHelpText>Fecha</inlineHelpText>
        <label>Fecha Evento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Vencimiento_Contratos_Voz_Fija__c</fullName>
        <label>Fecha Vencimiento Contratos Voz Fija</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FourPlanning_Area_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obsoleto</label>
        <referenceTo>FourPlanning_Area__c</referenceTo>
        <relationshipLabel>4Planning (FourPlanning Area 1)</relationshipLabel>
        <relationshipName>FourPlannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FourPlanning_Area_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obsoleto</label>
        <referenceTo>FourPlanning_Area__c</referenceTo>
        <relationshipLabel>4Planning (FourPlanning Area 2)</relationshipLabel>
        <relationshipName>FourPlannings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FourPlanning_Area_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obsoleto</label>
        <referenceTo>FourPlanning_Area__c</referenceTo>
        <relationshipLabel>4Planning (FourPlanning Area 3)</relationshipLabel>
        <relationshipName>FourPlannings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frecuencia_Funcionarios_del_Cliente__c</fullName>
        <inlineHelpText>¿Con que Frecuencia te reúnes con tu Cliente?</inlineHelpText>
        <label>Frecuencia Funcionarios del Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Semanal</fullName>
                </value>
                <value>
                    <fullName>Quincenal</fullName>
                </value>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>No me reúno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frecuencia_de_Contacto_con_el_Cliente__c</fullName>
        <label>Frecuencia de Contacto con el Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diaria</fullName>
                </value>
                <value>
                    <fullName>Semanal</fullName>
                </value>
                <value>
                    <fullName>Quincenal</fullName>
                </value>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Ocasional</fullName>
                </value>
                <value>
                    <fullName>No me reúno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hito_Relevante_1__c</fullName>
        <label>Hito Relevante 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hito_Relevante_1_fecha__c</fullName>
        <label>Hito Relevante 1 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hito_Relevante_2__c</fullName>
        <label>Hito Relevante 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hito_Relevante_2_fecha__c</fullName>
        <label>Hito Relevante 2 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hito_Relevante_3__c</fullName>
        <label>Hito Relevante 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hito_Relevante_3_fecha__c</fullName>
        <label>Hito Relevante 3 fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISC__c</fullName>
        <label>ISC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top 3</fullName>
                </value>
                <value>
                    <fullName>Botton 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importancia_crecimiento_oficinas__c</fullName>
        <label>Importancia crecimiento oficinas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importancia_red_de_cajeros__c</fullName>
        <label>Importancia red de cajeros</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importancia_web__c</fullName>
        <label>Importancia web banking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ir_a_4Planning__c</fullName>
        <formula>HYPERLINK(&quot;/apex/CuestionarioFourPlanning?id=&quot;&amp;Cuenta__r.Id  , &quot;Ir a cuestionario&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No se utiliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Le_afectan_los_cambios_politicos__c</fullName>
        <label>Le afectan los cambios politicos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mayor_Nivel_de_Contacto_con_el_Cliente__c</fullName>
        <label>Mayor Nivel de Contacto con el Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C level</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Gerente</fullName>
                </value>
                <value>
                    <fullName>Jefe</fullName>
                </value>
                <value>
                    <fullName>Analista</fullName>
                </value>
                <value>
                    <fullName>Usuarios</fullName>
                </value>
                <value>
                    <fullName>Sin Contacto</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mejoraria_Relacion_Con_El_Cliente__c</fullName>
        <inlineHelpText>En las áreas con las que tenemos relación, ¿Crees que esta mejoraría si tuviésemos más reuniones?</inlineHelpText>
        <label>Mejoraria Relacion Con El Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_contacto_publico__c</fullName>
        <label>Nivel contacto publico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presidente país/Municipal/Prefeito/Intendente</fullName>
                </value>
                <value>
                    <fullName>Ministro/ Vice Ministro/Gerente General/ Secretario Area/Regidor/Síndico/Asesor</fullName>
                </value>
                <value>
                    <fullName>Director General/CIO/Director Tecnología/CIO/Director Tecnología</fullName>
                </value>
                <value>
                    <fullName>Gerente de Area</fullName>
                </value>
                <value>
                    <fullName>Director de Compras/Jefe Compras</fullName>
                </value>
                <value>
                    <fullName>Responsable/ Especialista Proyecto</fullName>
                </value>
                <value>
                    <fullName>Sin contacto</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_conocimiento_area1__c</fullName>
        <label>Obsoleto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_conocimiento_area2__c</fullName>
        <label>Obsoleto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_conocimiento_area3__c</fullName>
        <label>Obsoleto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_madurez_de_nuestra_soluci_n_res__c</fullName>
        <label>Nivel de madurez de nuestra solución res</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elaboración</fullName>
                </value>
                <value>
                    <fullName>Aprobación</fullName>
                </value>
                <value>
                    <fullName>Presentación Técnica</fullName>
                </value>
                <value>
                    <fullName>Negociación de Compras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_informa_dato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No informa dato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Numero_de_Empleados__c</fullName>
        <label>Numero de Empleados</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-100</fullName>
                </value>
                <value>
                    <fullName>100-500</fullName>
                </value>
                <value>
                    <fullName>500-1000</fullName>
                </value>
                <value>
                    <fullName>1000-5000</fullName>
                </value>
                <value>
                    <fullName>+ de 5000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_sucursales__c</fullName>
        <label>Numero de sucursales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>10-50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-200</fullName>
                </value>
                <value>
                    <fullName>200-500</fullName>
                </value>
                <value>
                    <fullName>+ de 500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otro_nivel_de_contacto_con_cliente__c</fullName>
        <label>Otro nivel de contacto con cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otros_Servicios__c</fullName>
        <label>Otros Servicios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <description>pais de origen de la cuenta en hitos</description>
        <label>Pais</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parque_Automotor_Propio_o_Gestionado__c</fullName>
        <label>Parque Automotor Propio o Gestionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Gestionado</fullName>
                </value>
                <value>
                    <fullName>Mixta</fullName>
                </value>
                <value>
                    <fullName>Sin géstion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Porcentaje_de_completitud_de_la_cuenta__c</fullName>
        <label>Cuestionario completo al</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porcentaje_facturacion_fija__c</fullName>
        <label>Porcentaje facturacion fija</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porcentaje_facturacion_variable__c</fullName>
        <label>Porcentaje facturacion variable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presencia_Regional__c</fullName>
        <inlineHelpText>Presencia Regional / Cantidad de sedes en América.</inlineHelpText>
        <label>Presencia Regional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Perú</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Venezuela</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Panamá</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>México</fullName>
                </value>
                <value>
                    <fullName>España</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>RestoPaises</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qu_presupuesto_anual_maneja_tu_cliente__c</fullName>
        <label>¿Qué presupuesto anual maneja tu cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>